Fix overflow y scroll container issue

--- a/app/assets/stylesheets/styles/photo_feed.scss
+++ b/app/assets/stylesheets/styles/photo_feed.scss
@@ -1,26 +1,18 @@
 .feed-container-wrapper {
   width: 1680px;
-  // position: relative;
   padding-bottom: 100px;
   box-sizing: border-box;
   padding-top: 120px;
   height: 100vh;
   margin: auto;
   color: #212124;
-  overflow-y: scroll;
   z-index: -1;
-
-
-  background-color: blue;
-  // display: flex;
-  // justify-content: space-between;
 
   .feed-layout {
     margin: auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    // position: absolute;
 
     .feed-column {
       justify-content: space-between;
@@ -32,21 +24,18 @@
     }
   }
 }
+.feed-scroll-wrapper {
+  height: 100%;
+  overflow-y: scroll;
+}
 
-
-// .feed-panel {
-//   display: flex;
-//   margin-top: 100px;
-// }
 
 .feed-activity-card {
-  // float: left;
-  // left: 0px;
   top: 120px;
   background-color: #fff;
   width: 480px;
   margin-top: 0;
-  margin-bottom: 120px;
+  margin-bottom: 100px;
   transition: box-shadow .2s;
   border-radius: 4px;
 
